<resources>
    <string name="app_name">FinanceTrack</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="acceuil">Acceuil</string>
    <string name="depenses">Dépenses</string>
    <string name="revenus">Révenus</string>
    <string name="budget">Budgets</string>
    <string name="login_title">Connexion</string>
    <string name="login_welcome">Bienvenue sur FinanceTrack</string>
    <string name="login_email">Email</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_button">Se connecter</string>
    <string name="login_forgot_password">Mot de passe oublié ?</string>
    <string name="login_signup">Pas encore de compte ? S\'inscrire</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>